--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ pytest = "==5.4.2"
 poker = "==0.30.0"
 docker = "==4.2.0"
 flask = "==1.1.2"
+requests= "==2.23.0"
 
 [requires]
 python_version = "3.7"
